Uses toList instead of collect.